--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
+          cache: 'poetry'
 
       - run: |
           pip install --upgrade poetry
