--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-          cache: 'poetry'
+          cache: 'pip'
 
       - run: |
           pip install --upgrade poetry
