--- a/i18n.toml
+++ b/i18n.toml
@@ -9,7 +9,67 @@ fallback_language = "en"
 target_languages = [
     "af",
     "ar",
-    "cs"
+    "be",
+    "bg",
+    "bn",
+    "bs",
+    "ca",
+    "cy",
+    "da",
+    "de",
+    "el",
+    "en_GB",
+    "en_US",
+    "eo",
+    "es",
+    "et",
+    "eu",
+    "fa",
+    "fi",
+    "fr",
+    "gl",
+    "gu",
+    "he",
+    "hi",
+    "hr",
+    "hu",
+    "id",
+    "it",
+    "ja",
+    "ka",
+    "km",
+    "ko",
+    "ku",
+    "lo",
+    "lt",
+    "mk",
+    "mr",
+    "nb",
+    "nds",
+    "nl",
+    "nn",
+    "pa",
+    "pl",
+    "pt",
+    "pt_BR",
+    "ro",
+    "ru",
+    "si",
+    "sk",
+    "sl",
+    "sr",
+    "sv",
+    "ta",
+    "tg",
+    "th",
+    "tr",
+    "uk",
+    "vi",
+    "wa",
+    "xh",
+    "zh_CN",
+    "zh_TW",
+    "zu",
 ]
 
 # (Required) Path to the output directory, relative to `i18n.toml` of the crate
